# convert_doctest

./: .gitignore  LICENSE  README.md  copy_preprocess.py  pyproject.toml  source_file.py  target_file.py  test_indent_target.py
src/: copy_preprocess.py  doctester.py  watch_docstring.py
test/: test_bad_statement.py  test_capacity.py  test_indent_source.py  test_indent_target.py  test_math_target.py  test_nocodes.py  test_ps2_target.py  test_run_fail.py  test_run_pass.py  test_run_skip.py  test_run_static_0.py  test_run_static_1.py  test_run_test.py
